<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ErhuoStore</string>
    <string name="hello_world">Developed By HelloWorld</string>
    <string name="hello">Login</string>
    <string name="welcome">欢迎使用该系统</string>
    <string name="user_name">用户名</string>
    <string name="user_pass">密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="get_back">返回</string>
    <string name="action_settings">Search</string>
	<string name="type_page">某种商品</string>
	<string name="main_page">商品种类</string>
	<string name="conpage">消息列表</string>
	<!-- register -->
	<string name="comfirm_pass">确认密码</string>
	<string name="phone">手机号码</string>
	<string name="email">邮箱</string>
	<string name="regster_comfirm">立即注册</string>
	<!-- dilever -->
	<string name="item_info">商品信息</string>
	<string name="item_name">商品名称</string>
	<string name="item_desc">商品描述</string>
	<string name="price">出售价格</string>
	<string name="item_type">商品类型</string>
	<string name="item_pic">商品图片</string>
	<string name="confirm">确定</string>
	<!-- order_page -->
	<string name="order_msg">订单信息</string>
	<string name="phone_num">联系电话</string>
	<string name="place">交易地点</string>
	<string name="time">交易时间</string>
	<!-- item_page -->
	<string name="item_price">价格</string>
	<string name="buy">立即购买</string>
	<string name="contact">联系卖家</string>
	<string name="favor">收藏商品</string>
	<string name="favored">已收藏</string>
	<string name="bntodeliver">发布商品</string>
	<!-- order-detail -->
	<string name="status1">待售</string>
	<string name="status2">交易中</string>
	<string name="status3">已售出</string>
	<string name="myfavor">我的收藏</string>
	<string name="mydeliver">我的发布</string>
	<string name="myorder">我的订单</string>
	<string name="search_hint">随便搜搜</string>
	<string name="search">搜一搜</string>
	<string name="result_page">搜索结果</string>
	<string name="back_reg">注册</string>
	<string name="more_tital">更多</string>
	<string name="more_kefu">客服 xxx-xxx-xxxx</string>
	<string name="more_fabu">发布</string>
	<string name="login_1">登录账号</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="menu_myorder">我的订单</string>
	<string name="menu_mydeliver">我的发布</string>
	<string name="menu_myfavor">我的收藏</string>
	<string name="menu_mymsg">我的消息</string>
	<string name="memu_deliver">发布商品</string>
	<string name="memu_quit">退出登录</string>
	<string name="menu_manageuser">资料管理</string>
	<string name="memu_func">功能</string>
	<string name="user_info">个人信息</string>
</resources>
