<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableLayout
        android:id="@+id/tablelayout_itempic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/itempic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/demo1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablelayout_itemname">
        <TextView
            android:id="@+id/itemname"
            android:text="@string/item_name"
            android:gravity=""
            android:drawableStart="@drawable/robot"
            android:textSize="12pt"/>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablelayout_itemprice">
        <TextView
            android:id="@+id/itemprice"
            android:text="@string/item_price"
            android:gravity=""
            android:drawableStart="@drawable/robot"
            android:textSize="12pt"/>
    </TableLayout>
    <TableLayout
        android:id="@+id/tablelayout_itempagebuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2">
        <TableRow>
            <Button
                android:id="@+id/favoritem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favor"/>
            <Button
                android:id="@+id/contactseller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"/>
            <Button
                android:id="@+id/purchaseitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
