<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg2"
    android:stretchColumns="1">
	<RelativeLayout
		android:id="@+id/loginTop"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/top_bg"
		android:orientation="horizontal" >


		<TextView
			android:id="@+id/registerText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:gravity="center_vertical"
			android:text="@string/login_1"
			android:textColor="#ffffff"
			android:textSize="25sp" />
	</RelativeLayout>

	<LinearLayout
		android:id="@+id/linear_top"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="30dp"
		android:paddingRight="20dp"
		android:paddingTop="30dp"
		android:orientation="vertical" >

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="10dp"
				android:layout_marginLeft="1dp"
				android:layout_marginRight="1dp"
				android:background="@android:color/transparent" >
			</LinearLayout>

			<EditText
				android:id="@+id/userEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="1dp"
				android:layout_marginRight="1dp"
				android:background="#ffffff"
				android:drawableLeft="@drawable/security_row_username"
				android:hint="@string/user_name"
				android:paddingBottom="10dp"
				android:paddingLeft="3dp"
				android:paddingTop="3dp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="20dp"
				android:layout_marginLeft="1dp"
				android:layout_marginRight="1dp"
				android:background="@android:color/transparent" >
			</LinearLayout>

			<EditText
				android:id="@+id/pwdEditText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="1dp"
				android:layout_marginRight="1dp"
				android:background="#ffffff"
				android:drawableLeft="@drawable/security_row_password"
				android:hint="@string/user_pass"
				android:inputType="textPassword"
				android:paddingBottom="10dp"
				android:paddingLeft="3dp"
				android:paddingRight="3dp"
				android:paddingTop="3dp" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginLeft="1dp"
				android:layout_marginRight="1dp"
				android:background="#D3C9BF" >
			</LinearLayout>
	</LinearLayout>



    	<Button 
    	    android:id="@+id/bnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_marginTop="30dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="20dp"
            android:background="@drawable/shape2"
			android:textSize="@dimen/label_font_size"
    	    android:text="@string/login"
			android:textStyle="bold"/>

    	<Button 
    	    android:id="@+id/bnCancel"
			android:textSize="@dimen/label_font_size"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="30dp"
			android:layout_marginRight="20dp"
    	    android:text="@string/cancel"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
            android:background="@drawable/shape2"/>

</TableLayout>
