<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/loginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/top_bg"
        android:orientation="horizontal" >


        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/regster_comfirm"
            android:textColor="#ffffff"
            android:textSize="25dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="@dimen/label_font_size"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/reg_name"
            android:inputType="text"
        	android:labelFor="@id/reg_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_pass"
            android:textSize="@dimen/label_font_size"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/reg_psw"
            android:inputType="textPassword"
        	android:labelFor="@id/reg_psw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_pass"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comfirm_pass"
            android:textSize="@dimen/label_font_size"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/rereg_psw"
            android:inputType="textPassword"
        	android:labelFor="@id/rereg_psw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comfirm_pass"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="@dimen/label_font_size"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/reg_phonenum"
            android:inputType="text"
        	android:labelFor="@id/reg_phonenum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="#000000"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/label_font_size"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/reg_email"
            android:inputType="text"
        	android:labelFor="@id/reg_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#000000"/>
    </LinearLayout>

    <Button
        android:id="@+id/bnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape2"
        android:textColor="#000000"
        android:text="@string/regster_comfirm"
        android:textSize="20dp" />
    <Button
        android:id="@+id/bnBack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape2"
        android:textColor="#000000"
        android:text="@string/get_back"
        android:textSize="20dp" />

</LinearLayout> 